[*] minor fixes on everything